--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
-  flutter_html_view: "^0.3.1"
+  flutter_html_view: ^0.5.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_webview_plugin: ^0.1.6
+  flutter_webview_plugin: ^0.3.5
 
 dev_dependencies:
   flutter_test:
